--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "debug": "^4.3.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "supports-color": "8.1.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
